examples/high-quality-code/coupling/coupling-types/good/data-parameters/a-module.mjs
export function calculateShapeArea(width, height) {
  return width * height;
}
