examples/high-quality-code/coupling/coupling-types/bad/internal-knowledge/partial-initialisation/b-module.mjs
export function calculateShapeArea(triangle) {
  return triangle.area();
}
